# csinalando

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/migrations/2023-04-08-133928_create_todos/: up.sql
backend/src/: db.rs  main.rs  schema.rs
backend/src/todos/: data_source.rs  mod.rs  repository.rs  web.rs
backend/src/todos/repository/: model.rs
client/: Cargo.toml
client/src/: config.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
