[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.70"
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["std", "derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
ulid = { version = "1.0.0", features = ["default", "serde"] }
